--- a/style.css
+++ b/style.css
@@ -38,8 +38,8 @@ main p {
 
 footer {
   background-color: #6b655b;
-  margin-top: 40px;
-  margin-bottom: 0;
+  margin-bottom: -14px;
+  bottom: 0px;
 }
 
 footer p {
