--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ header .title {
   text-align: center;
   margin: 0;
   padding: 20px 0;
-  font-family: 'Nanum Pen Script', cursive;
+  font-family: 'Nanum Pen Script', 'Montserrat Alternates', sans-serif;
   font-size: 56px;
 }
 
